
### Changes in preprocessor macros

- removed `#define` of `strcasecmp` and `strncasecmp` (in case of Windows builds) in scip/def.h;
  use SCIPstr(n)casecmp() (scip/pub_misc.h) instead
- SCIPincludeConshdlrOrbitopePP(), SCIPcreateConsOrbitopePP(), SCIPcreateConsBasicOrbitopePP(), SCIPincludeConshdlrOrbitopeFull(), SCIPcreateConsOrbitopeFull(), SCIPcreateConsBasicOrbitopeFull()

### Command line interface

- help <command> now allows to display information on specific command.
- allow to hide certain commands in the help list
- add the (hidden) command "exit" to exit SCIP.
- Add iis option to create an infeasible subsystem
- Add write/iis option to write out the infeasible subsystem to file
- Add display/iis option to write out the infeasible subsystem to console

### Interfaces to external software

### Changed parameters

- heuristics/scheduler/heurtimelimit removed to avoid indeterministic behavior of scheduler heuristic, uses main time limit instead
- removed parameters "constraints/orbitope/checkpporbitope", "constraints/orbitope/sepafullorbitope", "constraints/orbitope/forceconscopy", which became superfluous

### New parameters

- branching/pscost/discountfactor, branching/relpscost/discountfactor as the discount factor for ancestral pseudo costs in pscost and relpscost branching rules
- branching/discountedpscost to enable/disable recording ancestral pseudo costs
- new parameter "propagating/symmetry/handlesignedorbitopes" to control whether special symmetry handling techniques for orbitopes whose columns can be (partially) reflected shall be applied
- new parameter "propagating/symmetry/usesimplesgncomp" to control whether symmetry components all of whose variables are simultaneously reflected by a symmetry shall be handled by a special inequality
- new parameter "propagating/symmetry/dispsyminfo" to control whether information about which symmetry handling methods are applied are printed