@@ -1508,7 +1508,6 @@ $(SCIPCONFIGHFILE) :
 		@echo "#define SCIP_VERSION_MAJOR $(SCIP_VERSION_MAJOR)" >> $@
 		@echo "#define SCIP_VERSION_MINOR $(SCIP_VERSION_MINOR)" >> $@
 		@echo "#define SCIP_VERSION_PATCH $(SCIP_VERSION_PATCH)" >> $@
-		@echo "#define SCIP_VERSION_SUB $(SCIP_VERSION_SUB)" >> $@
 		@echo "#define SCIP_VERSION_API $(SCIP_VERSION_API)" >> $@
 ifeq ($(NOBLKBUFMEM),true)
 		@echo "#define BMS_NOBLOCKMEM" >> $@
