@@ -96,9 +96,8 @@ CLOCKTYPE	=	1
 SCIP_VERSION_MAJOR = 10
 SCIP_VERSION_MINOR = 0
 SCIP_VERSION_PATCH = 0
-SCIP_VERSION_SUB = 0
 SCIP_VERSION_API = 132
-SCIP_VERSION = $(SCIP_VERSION_MAJOR).$(SCIP_VERSION_MINOR).$(SCIP_VERSION_PATCH).$(SCIP_VERSION_SUB)
+SCIP_VERSION = $(SCIP_VERSION_MAJOR).$(SCIP_VERSION_MINOR).$(SCIP_VERSION_PATCH)
 
 # compiling and linking parameters
 VERBOSE		=	false
