@@ -58,7 +58,7 @@ const char* SCIPgetBuildFlags(
  SANITIZE_UNDEFINED=@SANITIZE_UNDEFINED@\n\
  SANITIZE_THREAD=@SANITIZE_THREAD@\n\
  SHARED=@SHARED@\n\
- VERSION=@SCIP_VERSION_MAJOR@.@SCIP_VERSION_MINOR@.@SCIP_VERSION_PATCH@.@SCIP_VERSION_SUB@\n\
+ VERSION=@SCIP_VERSION_MAJOR@.@SCIP_VERSION_MINOR@.@SCIP_VERSION_PATCH@\n\
  API_VERSION=@SCIP_VERSION_API@\n\
  ZIMPL=@ZIMPL@\n\
  ZLIB=@ZLIB@";
